View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033513 | Open CASCADE | OCCT:Visualization | public | 2023-10-23 19:57 | 2024-09-14 21:58 |
Reporter | carlosah | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu 20.04 | ||
Product Version | Unscheduled | ||||
Target Version | Unscheduled | Fixed in Version | 7.9.0 | ||
Summary | 0033513: Visualization - Integration of the ability to zoom with vertical mouse movements. | ||||
Description | Currently zoom is only working when user moving mouse horizontally, vertical movements aren't affecting zoom functionality. | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | None | ||||
|
Branch CR33513 has been created by carlosah. SHA-1: f60082f9fb70440a6e77c3e37918de166bacc264 Detailed log of new commits: Author: carlosah Date: Tue Oct 24 14:20:10 2023 +0000 0033513: Zooming - Only working when mouse move horizontally |
|
For me it looks ok. Was added enum which allows to zoom in/ zoom out vertically. |
|
Now awaiting for tests on Jenkins, Will be approved after tests. (now no remarks) |
|
@carlosah need to update git commit and replace "Zooming" with "Visualization" |
|
Branch CR33513 has been updated forcibly by carlosah. SHA-1: f51879ff1c829eb535b9a4ecf02644a6de34c90c |
|
Updated git commit message according to @dpasukhi comment. |
|
@carlosah please add some comments to your git message. I guess it is possible to merge if you will create a new variable const double aDelta = myMouseActiveGesture == AIS_MouseGesture_Zoom ? aDelta.x() : aDelta.y(); + case AIS_MouseGesture_ZoomVertical: + { + if (!myToAllowZooming) + { + break; + } + const double aZoomTol = theIsEmulated + ? double(myTouchToleranceScale) * myTouchZoomThresholdPx + : 0.0; + if (double (Abs (aDelta.y())) > aZoomTol) + { + if (UpdateZoom (Aspect_ScrollDelta (aDelta.y()))) + { + toUpdateView = true; + } + myMouseProgressPoint = thePoint; + } + break; + } |
|
Branch CR33513_1 has been created by mzernova. SHA-1: 86490f2d3a61161535df58ffce746d318ae93685 Detailed log of new commits: Author: carlosah Date: Tue Oct 24 15:20:10 2023 +0100 0033513: Visualization - Integration of the ability to zoom with vertical mouse movements Added a new gesture for zooming after vertical mouse movement - AIS_MouseGesture_ZoomVertical |
|
Please integrate OCCT: CR33513_1 Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR33513-master-mzernova/view/ALL/ |
|
Branch CR33513 has been deleted by dpasukhi. SHA-1: f51879ff1c829eb535b9a4ecf02644a6de34c90c |
|
Branch CR33513_1 has been deleted by dpasukhi. SHA-1: 86490f2d3a61161535df58ffce746d318ae93685 |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-10-23 19:57 | carlosah | New Issue | |
2023-10-23 19:57 | carlosah | Assigned To | => carlosah |
2023-10-25 21:00 | git | Note Added: 0114434 | |
2023-10-25 21:06 | carlosah | Assigned To | carlosah => vtryputs |
2023-10-25 21:06 | carlosah | Status | new => feedback |
2023-10-26 11:36 | vtryputs | Note Added: 0114435 | |
2023-10-26 11:36 | vtryputs | Assigned To | vtryputs => dpasukhi |
2023-11-09 19:27 | dpasukhi | Status | feedback => resolved |
2023-11-09 19:27 | dpasukhi | Steps to Reproduce Updated | |
2023-11-09 19:29 | dpasukhi | Note Added: 0114554 | |
2023-11-09 19:30 | dpasukhi | Note Edited: 0114554 | |
2023-11-10 17:47 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2023-11-10 17:47 | dpasukhi | Status | resolved => reviewed |
2023-11-10 17:47 | dpasukhi | Note Added: 0114561 | |
2023-11-10 17:47 | dpasukhi | Assigned To | bugmaster => carlosah |
2023-11-10 17:47 | dpasukhi | Status | reviewed => assigned |
2023-11-10 17:48 | dpasukhi | Note Edited: 0114561 | |
2023-11-10 17:49 | dpasukhi | Summary | Zooming - Only working when mouse move horizontally. => Visualization - Integration of the ability to zoom with vertical mouse movements. |
2024-06-04 14:18 | git | Note Added: 0115944 | |
2024-06-04 14:22 | carlosah | Note Added: 0115945 | |
2024-07-15 20:32 | carlosah | Assigned To | carlosah => mzernova |
2024-07-15 21:46 | dpasukhi | Note Added: 0116181 | |
2024-07-16 11:39 | mzernova | Status | assigned => resolved |
2024-07-16 13:15 | git | Note Added: 0116189 | |
2024-07-16 16:08 | mzernova | Assigned To | mzernova => bugmaster |
2024-07-16 16:08 | mzernova | Status | resolved => reviewed |
2024-07-16 16:08 | mzernova | Note Added: 0116191 | |
2024-07-22 12:38 | dpasukhi | Status | reviewed => verified |
2024-07-22 12:38 | dpasukhi | Resolution | open => fixed |
2024-07-22 12:38 | dpasukhi | Fixed in Version | => 7.9.0 |
2024-07-22 12:38 | dpasukhi | Test case number | => None |
2024-09-14 21:58 | git | Note Added: 0116648 | |
2024-09-14 21:58 | git | Note Added: 0116649 |