0033513: Visualization - Integration of the ability to zoom with vertical mouse movements

Added a new gesture for zooming after vertical mouse movement - AIS_MouseGesture_ZoomVertical